# DinoGame

./: .gitignore  LICENSE  Procfile  README.md  package-lock.json  package.json
Client/: index.css  index.html
Client/dino-client/: package-lock.json  package.json
Client/dino-client/src/: App.js  index.css
DinoGame/: pom.xml
DinoGame/src/main/java/xyz/he00741098/DinoGame/: DinoGameApplication.java
DinoGame/src/test/java/xyz/he00741098/DinoGame/: DinoGameApplicationTests.java
client/: client.js  clientnew.js  game.html  index.css  index.html  obstacles.js  scoreboard.js  start.css  start.js
client-new/: home.html  index.js
client-rust/: client.js  game.html  index.html  scoreboard.js  start.css  start.js
client-rust/css/: index.css  start.css
rust-server/: Cargo.toml  Procfile  rust.md
rust-server/src/: client_command.rs  main.rs
rust-testing/: test.js
server/: index.js
test/: local_server.js
