[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3.28"
futures-channel = "0.3.28"
tungstenite = "0.18.0"
rand = "0.8.4"
thiserror = "1.0.40"
shuttle-runtime = "0.31.0"
